--- a/package.json
+++ b/package.json
@@ -46,14 +46,15 @@
     "build-dev": "npm run generate-3.0.1-withStringEnums && npm run build-dev-js"
   },
   "devDependencies": {
-    "@openapitools/openapi-generator-cli": "2.13.1",
+    "@openapitools/openapi-generator-cli": "2.13.5",
+    "axios": "1.7.4",
     "rimraf": "5.0.7",
     "ts-loader": "9.5.1",
     "typedoc": "0.25.13",
     "typedoc-github-wiki-theme": "2.0.0",
     "typedoc-plugin-markdown": "4.0.2",
     "typescript": "5.0.2",
-    "webpack": "5.76.3",
+    "webpack": "5.94.0",
     "webpack-cli": "5.1.4",
     "webpack-merge": "5.8.0"
   }
